<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- system -->
	<string name="versionCode">0.2.2</string>
	<string name="id">a14fb10eb869431</string>
	<string name="googleMapApiKey">0gzkigDOEurMAGpfHdyP20gihvlnrkIC9URX1tg</string>
    <string name="app_name">Fuchuen Taxi</string>
	<string name="line_package_name">jp.naver.line.android</string>

    <string name="driver_name_title">Driver：</string>
    <string name="driver_name">Fuchuen Lu</string>
    <string name="driver_phone_title">Phone：</string>
    <string name="driver_phone">+886916098379</string>
    <string name="driver_email">taxi_tw@hotmail.com</string>
    <string name="driver_line_id">J1wRJ7uDhZ</string>
    <string name="driver_email_title">[Fuchuen App]Passenger %1$s make a reservation on %2$s %3$s</string>

    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    
    <string name="fetch_data_fail">Server is busy. Please try again later.</string>
    <string name="fetch_data_no_network">Network is not connected. Can not get data.</string>
    <string name="login_no_network">Network is not connected. Can not Login.</string>
    <string name="register_no_network">Network is not connected. Can not Register.</string>
    
    <!-- opening -->
    <string name="opening_title">Welcome to use Fuchuen Taxi APP</string>
    
    <!-- common -->
    <string name="name_title">Name：</string>
    <string name="people_title">Passenger number:</string>
    <string name="time_title">Departure time:</string>
    <string name="time_hint">Please select time</string>
    <string name="date_hint">Please select date</string>
    <string name="start_title">Departure place:</string>
    <string name="destination_title">Destination place:</string>
    <string name="image_description">App Image</string>
    
    <string name="people">people</string>
    <string name="message">Passenger: %1$s, Number: %2$s, Time: %3$s, Departure place: %4$s, Destination place: %5$s.</string>
    <string name="leak_info">Please fill all fields, and then we can give you a best experience of tour! Thank you!</string>
    
    <!-- News -->
    <string name="news_item_template">%1$s %2$s.%3$s</string>
    
    <!-- Member -->
    <string name="member_user_name_title">Account(Phone number)</string>
    <string name="member_user_password_title">Password</string>
    <string name="member_user_password_confirm_title">Confirm Password</string>
    <string name="member_user_account_title">Name</string>
    <string name="member_user_register">Register</string>
    <string name="member_user_free_register">Free Register</string>
    <string name="member_user_login">Login</string>
    <string name="member_user_login_leak_info">Please enter account and password.</string>
    <string name="member_user_register_leak_info">All fields must be filled. Thanks you.</string>
    <string name="member_user_register_password_incorrect">Password is not match with Confirm Password. Please check it again. Thanks you.</string>
    <string name="member_user_register_success">Register successfully</string>
    <string name="member_user_register_user_name_taken">The account is existed</string>
    <string name="member_user_register_fail">Register fail</string>
    <string name="member_user_login_username_or_password_error">Account or Password is not correct</string>
    <string name="member_user_login_success">Login successfully</string>
    <string name="member_user_page_welcome">Hi %1$s, have a nice day！</string>
    <string name="member_user_take_count_title">Your Reward Points</string>
    <string name="member_user_take_count_hint_title">You can go Taiwan Taoyuan International Airport for free one time when you have 10 Reward Points.</string>
    <string name="member_user_take_count_zero_title">No Reward Point</string>
    <string name="member_user_logout">Logout</string>
    <string name="member_user_logining">Now Login...</string>
    <string name="member_user_registering">Now Register...</string>
    
    <!-- phone -->
    <string name="phone_hint_title">Hi, welcome to use PHONE Reservation.</string>
    <string name="phone_send">Call out</string>
    
    <!-- sms -->
    <string name="sms_hint_title">Hi, welcome to use SMS Reservation.</string>
    <string name="sms_send">Preview SMS</string>
    
    <!-- email -->
    <string name="email_hint_title">Hi, welcome to use EMAIL Reservation.</string>
    <string name="email_send">preview Email</string>
    
    <!-- Line -->
    <string name="line_hint_title">Hi, welcome to use LINE Reservation.</string>
    <string name="line_add_friend_hint">Press button to add friend with me, if we are not friend in Line App.</string>
    <string name="line_add_friend_button_title">Add Friend</string>
    <string name="line_button_title">Send Line</string>
    <string name="line_not_install">Line App is not installed. Please install it via Google Play. Thank you.</string>
	
</resources>