<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">
    
    <TextView 
        android:id="@+id/phone_hint_title"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_centerHorizontal="true"
   		android:layout_marginTop="20dp"
   		style="@style/Style_Font_Large_Black_Bold"
   		android:text="@string/phone_hint_title" />
    
    <RelativeLayout 
        android:id="@+id/phone_layout"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true"
    	android:padding="5dp"
    	android:background="@drawable/black_border" >
        
        <TextView 
            android:id="@+id/phone_driver_name_title"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		style="@style/Style_Font_Large_Black_Bold"
    		android:text="@string/driver_name_title" />
        <TextView 
            android:id="@+id/phone_driver_name"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_toRightOf="@id/phone_driver_name_title"
    		style="@style/Style_Font_Large_Black_Bold"
    		android:text="@string/driver_name" />
        <TextView 
            android:id="@+id/phone_driver_number_title"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/phone_driver_name"
    		style="@style/Style_Font_Large_Black_Bold"
    		android:text="@string/driver_phone_title" />
        <TextView 
            android:id="@+id/phone_driver_number"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/phone_driver_name"
    		android:layout_toRightOf="@id/phone_driver_number_title"
    		style="@style/Style_Font_Large_Black_Bold"
    		android:text="@string/driver_phone" />
        
        <Button 
            android:id="@+id/send"
            android:layout_width="180dp"
    		android:layout_height="40dp"
    		android:layout_centerHorizontal="true"
    		android:layout_below="@id/phone_driver_number"
    		android:layout_marginTop="20dp"
    		android:background="@drawable/btn_common"
    		style="@style/Style_Font_Large_White_Bold"
    		android:text="@string/phone_send" />
                
    </RelativeLayout>
    
</RelativeLayout>