<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/app_background">
    
    <TextView 
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
		android:layout_height="40dp"
		android:gravity="center"
		style="@style/Style_Font_Large_Black_Bold" />

    <TextView 
        android:id="@+id/user_take_count_hint_title"
        android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/welcome_title"
		android:gravity="center"
		style="@style/Style_Font_Medium_Black_Bold"
		android:textSize="14sp"
		android:textColor="@color/red"
		android:text="@string/member_user_take_count_hint_title" />
    
    <TextView 
        android:id="@+id/user_take_count_title"
        android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/user_take_count_hint_title"
		android:gravity="center"
		style="@style/Style_Font_Large_Black_Bold"
		android:text="@string/member_user_take_count_title" />
    
    <Button 
        android:id="@+id/logout"
        android:layout_width="180dp"
		android:layout_height="40dp"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="10dp"
		android:background="@drawable/btn_common"
		style="@style/Style_Font_Large_White_Bold"
		android:text="@string/member_user_logout" />
    
    <GridView
	    android:id="@+id/user_take_count_gridview"
	    android:layout_width="match_parent" 
	    android:layout_height="match_parent"
	    android:layout_below="@id/user_take_count_title"
	    android:layout_above="@id/logout"
	    android:numColumns="5"
	    android:columnWidth="50dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center"
	    android:visibility="gone" />
    
    <TextView 
        android:id="@+id/user_take_count_zero_title"
        android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/user_take_count_title"
	    android:layout_above="@id/logout"
		android:gravity="center"
		style="@style/Style_Font_Large_Black_Bold"
		android:text="@string/member_user_take_count_zero_title" />
    
</RelativeLayout>